# project-07_HaDucHuyK24

./: .gitignore  README.md  pyproject.toml
project_07/: dbt_project.yml
project_07/macros/: generate_schema_name.sql
project_07/models/marts/: _marts__models.yml  dim_currency.sql  dim_customer.sql  dim_date.sql  dim_location.sql  dim_product.sql  dim_store.sql  fact_exchange_rate.sql  fact_sale.sql  fact_sales.sql
project_07/models/staging/: sources.yml  stg_dim_currency.sql  stg_dim_customer.sql  stg_dim_date.sql  stg_dim_location.sql  stg_dim_product.sql  stg_dim_store.sql  stg_exchange_rate.sql  stg_sale.sql  stg_sales.sql
