[project]
name = "project-07-haduchuyk24"
version = "0.1.0"
description = "dbt and visualization"
authors = [
    {name = "Hhd",email = "hdh997@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core (>=1.11.12,<2.0.0)",
    "dbt-bigquery (>=1.11.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
